--- a/index.html
+++ b/index.html
@@ -12,7 +12,6 @@
   <!-- Font Awesome CDN: Biblioteca de iconos (redes sociales, carrito, etc.) -->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
   
-  <!-- Hoja de estilos personalizada (IMPORTANTE: Ruta actualizada a la carpeta css) -->
   <link rel="stylesheet" href="css/styles.css">
   
   <!-- Google Fonts: Carga de las tipografías personalizadas para el proyecto -->
@@ -89,7 +88,6 @@
       <div class="container-fluid px-4">
         <h2 class="text-center mb-5 section-title">Nuestros Productos</h2>
         <div class="row">
-
           <!-- Barra Lateral de Categorías -->
           <aside class="col-12 col-sm-2 col-md-4 mb-4">
             <h4 class="mb-3" style="font-family: 'Playfair Display', serif; font-weight: 600;">Categorías</h4>
@@ -114,25 +112,25 @@
 
           <!-- Contenedor Principal de la Cuadrícula de Productos -->
           <main class="col-12 col-sm-10 col-md-8">
-            <div id="product-list" class="row row-cols-2 row-cols-sm-3 row-cols-md-4 row-cols-lg-6 g-4">
+            <div id="product-list" class="row row-cols-1 row-cols-sm-3 row-cols-md-4 row-cols-lg-6 g-4">
                 <!-- Los productos se generan como tarjetas individuales -->
                 <div class="col product-item" data-category="pasteles">
-                    <div class="card h-100 text-center"><img src="images/pastelChocolate.png" class="card-img-top" alt="Pastel de Chocolate"><div class="card-body d-flex flex-column"><h5 class="card-title">Pastel de Chocolate</h5><p class="card-price mt-auto">$15.00</p><button class="btn btn-primary btn-sm mt-2"><i class="fas fa-cart-plus me-1"></i> Agregar</button></div></div>
+                    <div class="card h-100 text-center border"><img src="images/pastelChocolate.png" class="card-img-top img-fluid" alt="Pastel de Chocolate"><div class="card-body d-flex flex-column"><h5 class="card-title">Pastel de Chocolate</h5><p class="card-price mt-auto">$15.00</p><button class="btn btn-primary btn-sm mt-2"><i class="fas fa-cart-plus me-1"></i> Agregar</button></div></div>
                 </div>
                 <div class="col product-item" data-category="cupcakes">
-                    <div class="card h-100 text-center"><img src="images/cupcakeVanilla.png" class="card-img-top" alt="Cupcake de Vainilla"><div class="card-body d-flex flex-column"><h5 class="card-title">Cupcake de Vainilla</h5><p class="card-price mt-auto">$2.50</p><button class="btn btn-primary btn-sm mt-2"><i class="fas fa-cart-plus me-1"></i> Agregar</button></div></div>
+                    <div class="card h-100 text-center border"><img src="images/cupcakeVanilla.png" class="card-img-top img-fluid" alt="Cupcake de Vainilla"><div class="card-body d-flex flex-column"><h5 class="card-title">Cupcake de Vainilla</h5><p class="card-price mt-auto">$2.50</p><button class="btn btn-primary btn-sm mt-2"><i class="fas fa-cart-plus me-1"></i> Agregar</button></div></div>
                 </div>
                 <div class="col product-item" data-category="galletas">
-                    <div class="card h-100 text-center"><img src="images/galletas.png" class="card-img-top" alt="Galleta con Chispas"><div class="card-body d-flex flex-column"><h5 class="card-title">Galleta con Chispas</h5><p class="card-price mt-auto">$1.00</p><button class="btn btn-primary btn-sm mt-2"><i class="fas fa-cart-plus me-1"></i> Agregar</button></div></div>
+                    <div class="card h-100 text-center border"><img src="images/galletas.png" class="card-img-top img-fluid" alt="Galleta con Chispas"><div class="card-body d-flex flex-column"><h5 class="card-title">Galleta con Chispas</h5><p class="card-price mt-auto">$1.00</p><button class="btn btn-primary btn-sm mt-2"><i class="fas fa-cart-plus me-1"></i> Agregar</button></div></div>
                 </div>
                 <div class="col product-item" data-category="bebidas">
-                    <div class="card h-100 text-center"><img src="images/cafe.png" class="card-img-top" alt="Café Latte"><div class="card-body d-flex flex-column"><h5 class="card-title">Café Latte</h5><p class="card-price mt-auto">$4.50</p><button class="btn btn-primary btn-sm mt-2"><i class="fas fa-cart-plus me-1"></i> Agregar</button></div></div>
+                    <div class="card h-100 text-center border"><img src="images/cafe.png" class="card-img-top img-fluid" alt="Café Latte"><div class="card-body d-flex flex-column"><h5 class="card-title">Café Latte</h5><p class="card-price mt-auto">$4.50</p><button class="btn btn-primary btn-sm mt-2"><i class="fas fa-cart-plus me-1"></i> Agregar</button></div></div>
                 </div>
                 <div class="col product-item" data-category="cupcakes">
-                    <div class="card h-100 text-center"><img src="images/cheesecake.png" class="card-img-top" alt="Cheesecake de caramelo"><div class="card-body d-flex flex-column"><h5 class="card-title">Cheesecake de caramelo</h5><p class="card-price mt-auto">$20.00</p><button class="btn btn-primary btn-sm mt-2"><i class="fas fa-cart-plus me-1"></i> Agregar</button></div></div>
+                    <div class="card h-100 text-center border"><img src="images/cheesecake.png" class="card-img-top img-fluid" alt="Cheesecake de caramelo"><div class="card-body d-flex flex-column"><h5 class="card-title">Cheesecake de caramelo</h5><p class="card-price mt-auto">$20.00</p><button class="btn btn-primary btn-sm mt-2"><i class="fas fa-cart-plus me-1"></i> Agregar</button></div></div>
                 </div>
                 <div class="col product-item" data-category="pasteles">
-                    <div class="card h-100 text-center"><img src="images/pastelZanahoria.png" class="card-img-top" alt="Pastel de Zanahoria"><div class="card-body d-flex flex-column"><h5 class="card-title">Pastel Zanahoria</h5><p class="card-price mt-auto">$18.50</p><button class="btn btn-primary btn-sm mt-2"><i class="fas fa-cart-plus me-1"></i> Agregar</button></div></div>
+                    <div class="card h-100 text-center border"><img src="images/pastelZanahoria.png" class="card-img-top img-fluid" alt="Pastel de Zanahoria"><div class="card-body d-flex flex-column"><h5 class="card-title">Pastel Zanahoria</h5><p class="card-price mt-auto">$18.50</p><button class="btn btn-primary btn-sm mt-2"><i class="fas fa-cart-plus me-1"></i> Agregar</button></div></div>
                 </div>
             </div>
           </main>
@@ -208,7 +206,6 @@
   </footer>
   
   <!-- ======================== CARGA DE SCRIPTS JAVASCRIPT ======================== -->
-  <!-- Bootstrap 5 Bundle (incluye Popper.js para componentes como dropdowns) -->
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
   
   <!-- Scripts personalizados -->
